--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -46,7 +46,7 @@
     align-items: left;
     text-align: left;
     margin-left: auto;
-    flex-basis: 30%;
+    flex-basis: auto;
     justify-content: center;
     align-items: center;
     
@@ -104,28 +104,30 @@
     display: none;
   }
   
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 800px) {
     .nav-menu {
       display: flex;
       flex-direction: column;
       width: 100%;
       border-top: 1px solid #fff;
-      position: absolute;
+      position: fixed;
       top: 80px;
       left: -110%;
       opacity: 1;
       transition: all 0.5s ease;
-      gap: 15px;
+      gap:15px;
+    
+     
     
     }
 
     li:nth-child(1)
     {
-      margin-top: 20px;
+      margin-top: 15px;
     }
     li:nth-child(5)
     {
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     .nav-logo {
@@ -144,7 +146,7 @@
       left: 0px;
       opacity: 1;
       transition: all 0.5s ease;
-      z-index: 1;
+      z-index: 100;
     }
     .nav-item .active {
       color: #ffdd40;
